--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "shinnn/gulp-yo-yo",
   "author": "Shinnosuke Watanabe (https://github.com/shinnn)",
   "scripts": {
-    "pretest": "eslint --fix --config @shinnn/node index.js test.js",
+    "pretest": "eslint --fix --format=codeframe index.js test.js",
     "test": "node --throw-deprecation --track-heap-objects test.js",
     "coverage": "istanbul cover test.js"
   },
@@ -29,15 +29,18 @@
     "purify"
   ],
   "dependencies": {
-    "falafel": "github:substack/node-falafel#17ef2d851c4a023807bbfb0486f1cfdc34852d63",
+    "falafel": "github:substack/node-falafel#081ec3c19a8fa6b63d26bac7829f1938a88b9e24",
     "gulp-util": "^3.0.7",
-    "vinyl": "^1.2.0",
-    "yo-yoify": "^3.4.1"
+    "vinyl": "^2.0.1",
+    "yo-yoify": "^3.5.0"
   },
   "devDependencies": {
     "@shinnn/eslint-config-node": "^3.0.0",
-    "eslint": "^3.4.0",
+    "eslint": "^3.11.1",
     "istanbul": "^0.4.5",
-    "tape": "^4.6.0"
+    "tape": "^4.6.3"
+  },
+  "eslintConfig": {
+    "extends": "@shinnn/node"
   }
 }
