--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "purify"
   ],
   "dependencies": {
-    "falafel": "github:substack/node-falafel#081ec3c19a8fa6b63d26bac7829f1938a88b9e24",
-    "gulp-util": "^3.0.7",
-    "vinyl": "^2.0.1",
-    "yo-yoify": "^3.5.0"
+    "falafel": "^2.1.0",
+    "gulp-util": "^3.0.8",
+    "vinyl": "^2.0.2",
+    "yo-yoify": "^3.7.3"
   },
   "devDependencies": {
     "@shinnn/eslint-config-node": "^3.0.0",
-    "eslint": "^3.11.1",
+    "eslint": "^3.19.0",
     "istanbul": "^0.4.5",
     "tape": "^4.6.3"
   },
